<resources>
    <string name="app_name">LSF</string>

    <string name="login_to_lsf">Bei LSF anmelden</string>
    <string name="password">Passwort</string>
    <string name="username">Benutzername</string>
    <string name="login">Login</string>

    <string name="loading">Bitte warten…</string>
    <string name="result_login_failed">Anmeldung fehlgeschlagen</string>
    <string name="submit_value">Anmelden</string>

    <string name="grade_info_total_average_label">Vorläufige Durchschnittsnote:</string>
    <string name="grade_info_cp_base_courses_label">Erzielte CP im Grundstudium:</string>
    <string name="grade_info_cp_main_courses_label">Erzielte CP im Hauptstudium:</string>

    <string name="table_grade">Note:</string>
    <string name="table_attempt">Versuch:</string>
    <string name="table_ects">ECTS:</string>
    <string name="table_exam_number">Prüfungsnr.:</string>
    <string name="table_date">Datum:</string>

    <string name="no_grade_details">Keine Details verfügbar.</string>
    <string name="grade_details_grade_label">Deine Note:</string>
    <string name="grade_details_average_label">Durchschnitt:</string>
    <string name="grade_details_attendees_label">Teilnehmer:</string>

    <string name="menu_search">Suche</string>
    <string name="menu_search_hint">Suche Klausuren</string>
    <string name="domain">LSF-Domain</string>
    <string name="https">https://</string>
    <string name="channel_description_info">Neue Noten sind verfügbar.</string>
    <string name="error_login_failed">Login fehlgeschlagen.</string>
    <string name="error_request_failed">Neue Noten konnten nicht abgefragt werden.</string>
    <string name="result_new_grades_available">Es gibt neue Noten im LSF.</string>
    <string name="result_no_new_grades_available">Leider wurden keine neuen Noten eingetragen.</string>
</resources>
